# querry

./: .gitignore  Cargo.toml  Makefile  build.rs  readme.MD
.github/workflows/: build-ci.yml
migrations/: 20250520173500__initial_schema.sql
src/: lib.rs  main.rs
src/app/: init.rs  mod.rs
src/app/handlers/: collections.rs  images.rs  mod.rs  requests.rs
src/callbacks/: collections.rs  requests.rs
src/database/: mod.rs
src/utils/: mod.rs  sys_dir.rs
src/utils/crud/: collections.rs  requests.rs
ui/: global.slint  landing_page.slint  main.slint  theme.slint
ui/components/: collection_item.slint  collections.slint  footer.slint  headers.slint  request_item.slint  requests.slint
ui/components/base_requests/: authorization.slint  base.slint  header.slint  requests_form.slint
ui/components/collections/: collection_dropdown.slint  collection_item.slint  collections.slint  forms.slint  icons_popup.slint
ui/components/footer/: footer.slint
ui/components/header/: header_item.slint  headers.slint
ui/components/requests/: request_dropdown.slint  request_item.slint  requests.slint
ui/components/shared/: buttons.slint
ui/pages/: app_window.slint  landing_page.slint  main_page.slint
